--- a/sections/page-home.liquid
+++ b/sections/page-home.liquid
@@ -124,7 +124,7 @@
       <div class="db-row">
         <div class="db-col">
           <h1>
-            <span>Kill your bad vibes.</span>
+            <span>Vibe into the Afterlife.</span>
             <span>Become a</span>
             <span>Deadbeat</span>
           </h1>
