--- a/styles/db-theme/_footer.scss
+++ b/styles/db-theme/_footer.scss
@@ -379,7 +379,7 @@
               
               p {
                 color: #CAC7D0;
-                font-family: $primaryFontFamily;
+                font-family: sans-serif;
                 font-size: 16px;
                 font-style: normal;
                 font-weight: 400;
@@ -432,7 +432,7 @@
 
                 .db-menu-link {
                   color: #CAC7D0;
-                  font-family: $secondaryFontFamily;
+                  font-family: sans-serif;
                   font-size: 14px;
                   font-style: normal;
                   font-weight: 400;
