update copy content and assets

--- a/sections/page-about-us.liquid
+++ b/sections/page-about-us.liquid
@@ -28,7 +28,7 @@
                 <img class="db-img"
                   alt="Deadbeats Logo"
                   title="Deadbeats Logo"
-                  src="{{ 'DB-Trademark__asset.png' | asset_url }}"
+                  src="{{ 'DB_Main_logo-v02-1024x394.png' | asset_url }}"
                   width=""
                   height=""
                   loading="lazy"
@@ -54,7 +54,7 @@
                   It’s a wild story wrapped around a giant community game. You create your characters, discover new music, go to parties IRL, listen to our radio station, maybe even contribute to it.
                   <br/>
                   <br/>
-                  This world your world, this world is out world, from the OC waters to the OC islands. This world was made for you and us.
+                  This world your world, this world is our world, from the OC waters to the OC islands. This world was made for you and us.
                 </div>
 
                 <div class="yaas-inner-col">
