--- a/sections/page-home.liquid
+++ b/sections/page-home.liquid
@@ -126,7 +126,7 @@
           <h1>
             <span>Vibe into the Afterlife.</span>
             <span>Become a</span>
-            <span>Deadbeat</span>
+            <span>Deadbeat.</span>
           </h1>
           <p>
             In 2069 humanity has been replaced by 7 wildly fun, music genre loving boroughs of the undead, competing in one big game of musical glory!
