--- a/assets/theme.css
+++ b/assets/theme.css
@@ -6791,7 +6791,7 @@ ul, ol {
 .db-page--explore-oc .db-section--explore-oc-the-game .the-game .db-container .db-row:nth-child(1) .db-col:nth-child(2) .db-options .db-items::before {
   content: "";
   position: absolute;
-  z-index: 1;
+  z-index: -1;
   inset: 0;
   display: block;
   background: linear-gradient(90deg, rgba(161, 32, 210, 0.4) -19.47%, rgba(162, 82, 193, 0) 75%);
@@ -7527,8 +7527,15 @@ ul, ol {
   font-style: normal;
   font-weight: 500;
   line-height: 100%;
-  margin-top: 8px;
+  margin-top: 20px;
   max-width: 350px;
+}
+@media only screen and (max-width: 480px) {
+  .db-page--explore-oc .db-section--explore-oc-faction .db-container .db-row:nth-child(1) .db-col:nth-child(1) .join-us {
+    font-size: 10px;
+    margin-top: 10px;
+    max-width: 150px;
+  }
 }
 .db-page--explore-oc .db-section--explore-oc-faction .db-container .db-row:nth-child(1) .db-col:nth-child(2) {
   color: var(--whiteColor);
