--- a/styles/db-theme/_page--explore-oc.scss
+++ b/styles/db-theme/_page--explore-oc.scss
@@ -2620,7 +2620,6 @@
         max-width: 1393px;
 
         .db-row {
-          // justify-content: flex-end;
           column-gap: 238px;
 
           @media only screen and (max-width: 1440px) {
@@ -2812,7 +2811,6 @@
 
               &:nth-child(2) {
                 max-width: 493px;
-                // min-width: 493px;
                 width: 100%;
                 padding-top: 5px;
                 position: relative;
@@ -2836,7 +2834,6 @@
                   line-height: 1.15em;
                   letter-spacing: -2.24px;
                   max-width: 380px;
-                  // min-width: 380px;
                   width: 100%;
 
                   @media only screen and (max-width: 1080px) {
@@ -2919,7 +2916,7 @@
                     &::before {
                       content: "";
                         position: absolute;
-                        z-index: 1;
+                        z-index: -1;
                         inset: 0;
                         display: block;
                         background: linear-gradient(90deg, rgba(161, 32, 210, 0.40) -19.47%, rgba(162, 82, 193, 0.00) 75%);
@@ -3736,8 +3733,14 @@
                 font-style: normal;
                 font-weight: 500;
                 line-height: 100%;
-                margin-top: 8px;
+                margin-top: 20px;
                 max-width: 350px;
+
+                @media only screen and (max-width: 480px) {
+                  font-size: 10px;
+                  margin-top: 10px;
+                  max-width: 150px;
+                }
               }
             }
 
