update header copy content and links

--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -18,7 +18,7 @@
             BREAKING NEWS
           </h4>
           <p>
-            Put your digital John Hancock there mister, or maam, or mister maam and get updates direct to your eyeballs from 2069.
+            Put your digital John Hancock here mister, or maam, or mister maam and get updates direct to your eyeballs from 2069.
           </p>
           <form class="db-form--newsletter db-form validate"
             id="mc-embedded-subscribe-form"
