--- a/snippets/header.liquid
+++ b/snippets/header.liquid
@@ -114,16 +114,22 @@
         </div>
         <div class="db-col">
           <p>
-            We are a Web3 brand focused on creating the storyworld and building the story canon with us… ON AIR!.
+            Deadbeat is the rejection of bullshit. Of boredom. Of isolation. A world where music and friends and parties and stories and hooliganism ARE the daily grind.
             <br/>
             <br/>
-            In a post-apocalyptic world devoid of the living, a disillusioned disc jockey and his eclectic group of co-workers struggle to keep the beat at a radio station that has one foot in the grave.
+            So, you have a choice. Take us to bed or leave us forever.
+            <br/>
+            <br/>
+            Fuck, sorry. Wrong choice. This is your choice...
+            <br/>
+            <br/>
+            Stay a zombie. Or become a deadbeat.
           </p>
           {% render 'socials' %}
           <div class="db-inner-row">
             <a class="db-menu-link"
               title="Privacy Policy"
-              href="https://cdn.shopify.com/s/files/1/0829/1654/0715/files/Privacy_Policy_Terms_of_Use_IP_Rights.docx?v=1698970170"
+              href="https://cdn.shopify.com/s/files/1/0829/1654/0715/files/Privacy_Policy_Terms_of_Use_IP_Rights_2.pdf?v=1699294760"
               target="_blank">
               Privacy Policy
             </a>
@@ -142,7 +148,7 @@
             </svg>
             <a class="db-menu-link"
               title="Terms of Use"
-              href="https://cdn.shopify.com/s/files/1/0829/1654/0715/files/Privacy_Policy_Terms_of_Use_IP_Rights.docx?v=1698970170"
+              href="https://cdn.shopify.com/s/files/1/0829/1654/0715/files/Privacy_Policy_Terms_of_Use_IP_Rights_2.pdf?v=1699294760"
               target="_blank">
               Terms of Use
             </a>
