--- a/styles/db-theme/_page--explore-oc.scss
+++ b/styles/db-theme/_page--explore-oc.scss
@@ -3373,7 +3373,7 @@
       left: 0;
       bottom: 0;
       height: 100%;
-      background-image: url('Explore-OC_ComingSoon_bg-v02-3840x979.png');
+      background-image: url('Explore-OC__asset-v19-15075x2850.jpg');
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
@@ -3381,21 +3381,20 @@
       @media only screen and (min-width: 1920px) {
         background-size: auto 100%;
       }
-      
-      @media only screen and (max-width: 1440px) {
-        background-image: url('About-Us__asset-coming-soon-v01-3800x1958.png');
-        background-position: right;
-      }
 
+      @media only screen and (max-width: 1080px) {
+        background-image: url('Explore-OC__asset-v20-6817x2850.jpg');
+      }
+      
       @media only screen and (max-width: 768px) {
         position: relative;
-        background-image: url(Explore-OC_ComingSoon_bg-v03-769x622.png);
-        background-position: center;
-        background-size: auto 100%;
+        // background-image: url('Explore-OC_ComingSoon_bg-v03-769x622.png');
+        // background-position: center;
+        // background-size: auto 100%;
         height: 620px;
         display: block;
-        top: -31px;
-        width: calc(100% + 40px);
+        // top: -31px;
+        // width: calc(100% + 40px);
         margin: 0 -20px;
       }
 
